Add weather subdomain entities.