@@ -25,7 +25,7 @@ repositories {
 }
 
 dependencies {
-	// Annotation processors
+	// Code processors
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 
@@ -33,8 +33,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 
 	// Implementation
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-jersey'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// Testing
@@ -51,4 +51,5 @@ test {
 	// Should be removed when Gradle switch to Groovy 3
 	jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
 	jvmArgs('--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED')
+	jvmArgs('--add-opens', 'java.base/java.util=ALL-UNNAMED')
 }
